@@ -388,8 +388,12 @@ print_ff(unsigned char *msg, int len, struct sockaddr_in6 *addr, int hoplimit, u
 			rinfo = (struct nd_opt_route_info_local *) opt_str;
 
 			print_addr(&rinfo->nd_opt_ri_prefix, prefix_str);
-
-			printf("\n\troute %s/%d\n\t{\n", prefix_str, rinfo->nd_opt_ri_prefix_len);
+			if (optlen == 8) {
+				printf("\n\troute ::/0\n\t{\n");
+			}
+			else {
+				printf("\n\troute %s/%d\n\t{\n", prefix_str, rinfo->nd_opt_ri_prefix_len);
+			}
 
 			if (!edefs || (((radvert->nd_ra_flags_reserved & 0x18) >> 3) & 0xff) != DFLT_AdvRoutePreference) {
 				printf("\t\tAdvRoutePreference ");
